Agregamos un text-align end ^^

--- a/menu-mobile.html
+++ b/menu-mobile.html
@@ -27,6 +27,7 @@
 
         .mobile-menu {
             padding: 20px;
+            text-align: end;
         }
 
         .mobile-menu a {
@@ -40,6 +41,7 @@
             list-style: none;
             padding: 0;
             margin: 24px 0 0;
+            
         }
 
         .mobile-menu ul:nth-child(1) {
